--- a/src/scss/_formation.scss
+++ b/src/scss/_formation.scss
@@ -71,7 +71,7 @@ section.formation{
       ul li{
         font-size: 20px;
         margin-bottom: 20px;
-        color: #006a80;
+        color: #fff;
      }
   }
    
@@ -133,7 +133,7 @@ section.formation{
       h3{
     padding-top: 30px;
     font-size: 30px;
-    color: #242C3A;
+    color:#b3b8b9 ;
     padding-bottom: 10px;
   }
   ul{
@@ -142,7 +142,7 @@ section.formation{
   ul li{
     font-size: 20px;
     margin-bottom: 20px;
-    color: #282f3a;
+    color:#ced6d8 ;
  }
 }
  
