--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,7 +10,8 @@
     font-size: 14px;
     color: #555555;
     line-height: 1.429;
-    overflow-x: hidden !important;
+   overflow-x: hidden !important;
+
   }
   #navBar{
     border-bottom: #eef0ea !important;
@@ -22,6 +23,7 @@
     color: #fff !important;
     background-color:rgb(236, 235, 235) !important;
   }
+  
 .navbar .navbar-collapse ul li a{
   color: #007187;
   font-size: 15px;
@@ -32,6 +34,29 @@
   transition: all 0.5s ease;
   margin-left: 10px;
 }
+.navbar .navbar-collapse ul li a.nav-link:hover,
+.navbar .navbar-collapse ul li a.nav-link.active{
+  background-color:#004157 !important ;
+  color: #fff !important;
+}
+
+nav.navbar.noTransparent{
+    background-color: #fff !important;
+    border-bottom: 1px solid #eee !important;
+}
+
+nav.navbar.noTransparent .navbar-nav li a.nav-link {
+    color: #004157 !important;
+
+}
+nav.navbar.noTransparent .navbar-nav li a.nav-link:hover,
+nav.navbar.noTransparent .navbar-nav li a.nav-link.active
+
+{
+    background-color:#004157 !important;
+    color: #fff !important;
+}
+
 .navbar .login
 {
   color: #fff;
@@ -91,9 +116,15 @@ box-shadow: none !important;
 /*****************************
 sliders
 *****************************/
+#carouselExampleIndicators {
+  overflow-x: hidden !important;
+}
 #carouselExampleIndicators .carousel-inner .carousel-item img{
   height: 600px !important;
-  width: 1500px !important;
+  width: 10000px !important;
+  padding-right: 0px !important;
+  padding-left: 0px !important;
+  overflow-x: hidden !important;
 }
 #carouselExampleIndicators .carousel-inner .carousel-caption h1{
   text-align: center;
@@ -421,12 +452,23 @@ section.marks .overlay{
   background-color: rgba(25, 26, 19, 0.6) !important;
   padding-top: 100px;
 }
+section.advices{
+  background-image: url(../images/8888.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+}
+section.advices .overlay{
 
+  background-color: rgba(19, 20, 20, 0.6) !important;
+  padding-bottom: 50px;
+}
 section.advices h3{
   padding-top: 30px;
   font-size: 30px;
-  color: #004157;
+  color: #fff;
   padding-bottom: 10px;
+  
 }
 section.advices ul{
   margin-bottom: 20px;
@@ -434,7 +476,7 @@ section.advices ul{
 section.advices ul li{
    font-size: 20px;
    margin-bottom: 20px;
-   color: #006a80;
+   color: #fff;
 }
 
 /***************
@@ -494,10 +536,21 @@ section.mark .overlay{
   padding-top: 100px;
 
 }
+section.advice{
+  background-image: url(../images/128276-1.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+  overflow: hidden !important;
+}
+section.advice .overlay{
+  background-color: rgba(0, 0, 0, 0.6);
+  padding-bottom: 50px;
+}
 section.advice h3{
   padding-top: 30px;
   font-size: 30px;
-  color: #242C3A;
+  color: #b3b8b9;
   padding-bottom: 10px;
 }
 section.advice ul{
@@ -506,7 +559,7 @@ section.advice ul{
 section.advice ul li{
    font-size: 20px;
    margin-bottom: 20px;
-   color: #282f3a;
+   color: #ced6d8;
 }
 
 /***************
@@ -627,11 +680,11 @@ media*******
     
 }
 section.activity .activities .media-body h5{
-    font-size: 20px;
+    font-size: 21px;
     margin-bottom: 8px;
 }
 section.activity .activities .media-body p{
-    font-size: 12px;
+    font-size: 14px;
     line-height: 15px;
 }
 }
@@ -684,6 +737,13 @@ section.activity .activities .media-body p{
  section.sign form .create-account button.sign-in{
   margin-right: 50px !important;
 }
+}
+@media (max-width:550px) {
+  #carouselExampleIndicators .carousel-inner .carousel-item img{
+    height: 600px !important;
+    width: 1000px !important;
+   
+  }
 }
 @media (max-width:546px) {
   section.sign form .create-account button.sign-in{
